# TjslpHpcHandbook-VsCodeSample

./: README.md
sample-project/: .gitignore  pyproject.toml  sample-project.code-workspace
sample-project/src/exe/: main.py
sample-project/src/sample_project/: __init__.py
