[project]
name = "sample-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "yueyinqiu", email = "yueyinqiu@outlook.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true
